<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/calepintest">


    <TextView
        android:id="@+id/creditsTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/creditsTitre"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/texteCredits"
        android:layout_width="wrap_content"
        android:layout_below="@+id/creditsTitre"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:text="@string/textCredits1"
        android:textSize="18dp" />

    <TextView
    android:id="@+id/texteCredits2"
    android:layout_width="wrap_content"
    android:layout_below="@+id/texteCredits"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_marginStart="19dp"
    android:layout_marginLeft="19dp"
    android:text="@string/textCredits2"
    android:textSize="18dp" />

    <TextView
        android:id="@+id/texteCredits3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_below="@+id/texteCredits2"
        android:text="@string/textCredits3"
        android:textSize="18dp" />

    <ImageView
        android:id="@+id/logoic2"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_ic2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <ImageView
        android:id="@+id/logoUniv"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:scaleType="fitXY"
        android:src="@drawable/logolemans"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

</RelativeLayout>