<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/but"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:text="@string/regles1"
            android:textSize="14dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="165dp"
            android:id="@+id/textView5"
            android:text="@string/regles2"
            android:textSize="14dp"/>

        <ImageView

            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/victoire"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="66dp"
            android:layout_marginEnd="66dp"
            android:layout_marginBottom="37dp"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"/>


    </RelativeLayout>
</LinearLayout>
